<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".MainActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:orientation="vertical"
        >
        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            >
            <ImageView
                android:id="@+id/imv_head"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:background="@mipmap/ic_header"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginStart="@dimen/dp_5"
                android:text="@string/tv_directory"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imv_head"
                app:layout_constraintTop_toTopOf="parent"
                />
            <Button
                android:id="@+id/btn_dd"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_20"
                android:layout_margin="@dimen/dp_5"
                android:background="@drawable/bg_button_header_main"
                android:padding="@dimen/dp_2"
                android:text="@string/tv_drand_departments"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_so"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp"
                />
            <Button
                android:id="@+id/btn_so"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_20"
                android:layout_margin="@dimen/dp_5"
                android:background="@drawable/bg_button_header_main"
                android:text="@string/tv_special_offers"

                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp"
                />
        </android.support.constraint.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/tv_select_language"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_13"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rc_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginTop="@dimen/sp_10"
            />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#333333"
            android:padding="@dimen/dp_5"
            >
            <ImageView
                android:id="@+id/imv_wifi"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginStart="@dimen/dp_5"
                android:background="@mipmap/ic_wifi"
                android:backgroundTint="@android:color/white"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnusedAttribute"
                />

            <TextView
                android:id="@+id/tv_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/tv_free_wifi"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_10"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/imv_wifi"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp"
                />

            <TextView
                android:id="@+id/tv_wifi_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_available_in_store"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_6"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@id/imv_wifi"
                app:layout_constraintTop_toBottomOf="@id/tv_wifi"
                tools:ignore="SmallSp"
                />

            <View
                android:id="@+id/view_wifi"
                android:layout_width="0.5dp"
                android:layout_height="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toEndOf="@id/tv_wifi_2"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tv_touch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:text="@string/tv_touch_name_to_get_directions"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_13"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/view_wifi"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginStart="@dimen/dp_5"
                android:background="@mipmap/ic_hand"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_touch"
                app:layout_constraintTop_toTopOf="parent"
                />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
